--- a/MyContactDetails.html
+++ b/MyContactDetails.html
@@ -39,7 +39,7 @@
     </tbody>
   </table>
 
-  <form class="" action="mailto:anandha.chandrasekaran@vjsar.com" method="post">
+  <form class="" action="index.html" method="post">
     <label for="">Your Name: </label>
     <input type="text" name="yourName" value=""><br>
     <label for="">Your Email: </label>
